@@ -1,4 +1,4 @@
-## Interface: 110100
+## Interface: 110200
 ## Title: KeyCount
 ## Author: Vloer
 ## Version: @project-version@
